5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4146/executions/1800_2566.log
== TEST (2019-06-06 10:18:19) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
vet = zeros(6, dtype=int)
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for x in falt:
	if(x == 2):
		seg = seg + 1
	elif(x == 3):
		ter = ter + 1
	elif(x == 4):
		qua = qua + 1
	elif(x == 5):
		qui = qui + 1
	elif(x == 6):
		sex = sex + 1
	else:
		sab = sab + 1
		
		
print(seg)
print(ter)
print(qua)
print(qui)
print(sex)
print(sab)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:18:41) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
vet = zeros(6, dtype=int)
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for x in falt:
	if(x == 2):
		seg = seg + 1
	elif(x == 3):
		ter = ter + 1
	elif(x == 4):
		qua = qua + 1
	elif(x == 5):
		qui = qui + 1
	elif(x == 6):
		sex = sex + 1
	else:
		sab = sab + 1
		
		
print(seg)
print(ter)
print(qua)
print(qui)
print(sex)
print(sab)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:23:52) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
vet = zeros(6, dtype=int)
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for x in falt:
	if(x == 2):
		seg = seg + 1
	elif(x == 3):
		ter = ter + 1
	elif(x == 4):
		qua = qua + 1
	elif(x == 5):
		qui = qui + 1
	elif(x == 6):
		sex = sex + 1
	else:
		sab = sab + 1
	
p1 = round((seg/7), 1) 
p2 = round((ter/7), 1)
p3 = round((qua/7), 1)
p4 = round((qui/7), 1)
p5 = round((sex/7), 1)
p6 = round((sab/7), 1)

vet[0] = vet[0] + p1
vet[1] = vet[1] + p2
vet[2] = vet[2] + p3
vet[3] = vet[3] + p4
vet[4] = vet[4] + p5
vet[5] = vet[5] + p6

print(vet)

		
		

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:25:18) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
vet = zeros(6, dtype=int)
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for x in falt:
	if(x == 2):
		seg = seg + 1
	elif(x == 3):
		ter = ter + 1
	elif(x == 4):
		qua = qua + 1
	elif(x == 5):
		qui = qui + 1
	elif(x == 6):
		sex = sex + 1
	else:
		sab = sab + 1
	
	p1 = round((seg/7), 1) 
	p2 = round((ter/7), 1)
	p3 = round((qua/7), 1)
	p4 = round((qui/7), 1)
	p5 = round((sex/7), 1)
	p6 = round((sab/7), 1)

vet[0] = vet[0] + p1
vet[1] = vet[1] + p2
vet[2] = vet[2] + p3
vet[3] = vet[3] + p4
vet[4] = vet[4] + p5
vet[5] = vet[5] + p6

print(vet)

		
		

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:25:23) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
vet = zeros(6, dtype=int)
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for x in falt:
	if(x == 2):
		seg = seg + 1
	elif(x == 3):
		ter = ter + 1
	elif(x == 4):
		qua = qua + 1
	elif(x == 5):
		qui = qui + 1
	elif(x == 6):
		sex = sex + 1
	else:
		sab = sab + 1
	
	p1 = round((seg/7), 1) 
	p2 = round((ter/7), 1)
	p3 = round((qua/7), 1)
	p4 = round((qui/7), 1)
	p5 = round((sex/7), 1)
	p6 = round((sab/7), 1)

vet[0] = vet[0] + p1
vet[1] = vet[1] + p2
vet[2] = vet[2] + p3
vet[3] = vet[3] + p4
vet[4] = vet[4] + p5
vet[5] = vet[5] + p6

print(vet)

		
		

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:29:15) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
vet = zeros(6, dtype=int)
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for x in falt:
	if(x == 2):
		seg = seg + 1
		vet[0] = vet[0] + round(seg/7, 1)
	elif(x == 3):
		ter = ter + 1
		vet[1] = vet[1] + round(ter/7, 1)
	elif(x == 4):
		qua = qua + 1
		vet[2] = vet[2] + round(qua/7, 1)
	elif(x == 5):
		qui = qui + 1
		vet[3] = vet[3] + round(qui/7, 1)
	elif(x == 6):
		sex = sex + 1
		vet[4] = vet[4] + round(sex/7, 1)
	else:
		sab = sab + 1
		vet[5] = vet[5] + round(sab/7, 1)
		
print(vet)		

		
		

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:29:28) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
vet = zeros(6, dtype=int)
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for x in falt:
	if(x == 2):
		seg = seg + 1
		vet[0] = vet[0] + round(seg/7, 1)
	elif(x == 3):
		ter = ter + 1
		vet[1] = vet[1] + round(ter/7, 1)
	elif(x == 4):
		qua = qua + 1
		vet[2] = vet[2] + round(qua/7, 1)
	elif(x == 5):
		qui = qui + 1
		vet[3] = vet[3] + round(qui/7, 1)
	elif(x == 6):
		sex = sex + 1
		vet[4] = vet[4] + round(sex/7, 1)
	else:
		sab = sab + 1
		vet[5] = vet[5] + round(sab/7, 1)
		
print(vet)		

		
		

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:33:49) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
vet = zeros(6, dtype=int)
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for x in falt:
	if(x == 2):
		seg = seg + 1
	elif(x == 3):
		ter = ter + 1
	elif(x == 4):
		qua = qua + 1
	elif(x == 5):
		qui = qui + 1
	elif(x == 6):
		sex = sex + 1
	else:
		sab = sab + 1
		
		
		
print(seg)
print(ter)
print(qua)
print(qui)
print(sex)
print(sab)

		
		

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:35:59) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
con = zeros(6, dtype=int)
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for x in falt:
	if(x == 2):
		seg = seg + 1
	elif(x == 3):
		ter = ter + 1
	elif(x == 4):
		qua = qua + 1
	elif(x == 5):
		qui = qui + 1
	elif(x == 6):
		sex = sex + 1
	else:
		sab = sab + 1
		
cont[0] = cont[0] + seg 		
		
		
		
#print(seg)
#print(ter)
#print(qua)
#print(qui)
#print(sex)
#print(sab)

print(cont[0])		
		

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:36:14) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
con = zeros(6, dtype=int)
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for x in falt:
	if(x == 2):
		seg = seg + 1
	elif(x == 3):
		ter = ter + 1
	elif(x == 4):
		qua = qua + 1
	elif(x == 5):
		qui = qui + 1
	elif(x == 6):
		sex = sex + 1
	else:
		sab = sab + 1
		
con[0] = con[0] + seg 		
		
		
		
#print(seg)
#print(ter)
#print(qua)
#print(qui)
#print(sex)
#print(sab)

print(con[0])		
		

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:36:24) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
con = zeros(6, dtype=int)
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for x in falt:
	if(x == 2):
		seg = seg + 1
	elif(x == 3):
		ter = ter + 1
	elif(x == 4):
		qua = qua + 1
	elif(x == 5):
		qui = qui + 1
	elif(x == 6):
		sex = sex + 1
	else:
		sab = sab + 1
		
con[0] = con[0] + seg 		
		
		
		
#print(seg)
#print(ter)
#print(qua)
#print(qui)
#print(sex)
#print(sab)

print(con[0])		
		

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:41:50) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
con = zeros(6, dtype=int)
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for x in falt:
	if(x == 2):
		seg = seg + 1
	elif(x == 3):
		ter = ter + 1
	elif(x == 4):
		qua = qua + 1
	elif(x == 5):
		qui = qui + 1
	elif(x == 6):
		sex = sex + 1
	else:
		sab = sab + 1
		
con[0] = con[0] + seg 	
con[1] = con[1] + ter
con[2] = con[2] + qua
con[3] = con[3] + qui
con[4] = con[4] + sex
con[5] = con[5] + sab

i = 0

for x in con:
	if(x > 0):
		con[i] = round(con[i]/7, 1)
		i = i + 1
	else:
		con[i] = 0
		i = i + 1
		
		
		
#print(seg)
#print(ter)
#print(qua)
#print(qui)
#print(sex)
#print(sab)

print(con[0])		
		

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:41:57) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
con = zeros(6, dtype=int)
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for x in falt:
	if(x == 2):
		seg = seg + 1
	elif(x == 3):
		ter = ter + 1
	elif(x == 4):
		qua = qua + 1
	elif(x == 5):
		qui = qui + 1
	elif(x == 6):
		sex = sex + 1
	else:
		sab = sab + 1
		
con[0] = con[0] + seg 	
con[1] = con[1] + ter
con[2] = con[2] + qua
con[3] = con[3] + qui
con[4] = con[4] + sex
con[5] = con[5] + sab

i = 0

for x in con:
	if(x > 0):
		con[i] = round(con[i]/7, 1)
		i = i + 1
	else:
		con[i] = 0
		i = i + 1
		
		
		
#print(seg)
#print(ter)
#print(qua)
#print(qui)
#print(sex)
#print(sab)

print(con)		
		

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:42:12) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
con = zeros(6, dtype=int)
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for x in falt:
	if(x == 2):
		seg = seg + 1
	elif(x == 3):
		ter = ter + 1
	elif(x == 4):
		qua = qua + 1
	elif(x == 5):
		qui = qui + 1
	elif(x == 6):
		sex = sex + 1
	else:
		sab = sab + 1
		
con[0] = con[0] + seg 	
con[1] = con[1] + ter
con[2] = con[2] + qua
con[3] = con[3] + qui
con[4] = con[4] + sex
con[5] = con[5] + sab

i = 0

for x in con:
	if(x > 0):
		con[i] = round(con[i]/7, 1)
		i = i + 1
	else:
		con[i] = 0
		i = i + 1
		
		
		
#print(seg)
#print(ter)
#print(qua)
#print(qui)
#print(sex)
#print(sab)

print(con[0])		
		

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:42:17) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
con = zeros(6, dtype=int)
seg = 0
ter = 0
qua = 0
qui = 0
sex = 0
sab = 0

for x in falt:
	if(x == 2):
		seg = seg + 1
	elif(x == 3):
		ter = ter + 1
	elif(x == 4):
		qua = qua + 1
	elif(x == 5):
		qui = qui + 1
	elif(x == 6):
		sex = sex + 1
	else:
		sab = sab + 1
		
con[0] = con[0] + seg 	
con[1] = con[1] + ter
con[2] = con[2] + qua
con[3] = con[3] + qui
con[4] = con[4] + sex
con[5] = con[5] + sab

i = 0

for x in con:
	if(x > 0):
		con[i] = round(con[i]/7, 1)
		i = i + 1
	else:
		con[i] = 0
		i = i + 1
		
		
		
#print(seg)
#print(ter)
#print(qua)
#print(qui)
#print(sex)
#print(sab)

print(con[0])		
		

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:53:38) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
s = 0
t = 0
w = 0
q = 0
f = 0
sb = 0

for x in falt:
	if (x == 2):
		s = s + 1
	elif (x == 3):
		t = t + 1
	elif (x == 4):
		w = w + 1
	elif (x == 5):
		q = q + 1
	elif (x == 6):
		f = f + 1
	else:
		sb = sb + 1
		
p1 = s/size(falt)
print(p1)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:53:59) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
s = 0
t = 0
w = 0
q = 0
f = 0
sb = 0

for x in falt:
	if (x == 2):
		s = s + 1
	elif (x == 3):
		t = t + 1
	elif (x == 4):
		w = w + 1
	elif (x == 5):
		q = q + 1
	elif (x == 6):
		f = f + 1
	else:
		sb = sb + 1
		
p1 = round(s/size(falt), 1)
print(p1)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:54:22) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
s = 0
t = 0
w = 0
q = 0
f = 0
sb = 0

for x in falt:
	if (x == 2):
		s = s + 1
	elif (x == 3):
		t = t + 1
	elif (x == 4):
		w = w + 1
	elif (x == 5):
		q = q + 1
	elif (x == 6):
		f = f + 1
	else:
		sb = sb + 1
		
p1 = round((s/size(falt)) * 100, 1)
print(p1)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:54:29) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
s = 0
t = 0
w = 0
q = 0
f = 0
sb = 0

for x in falt:
	if (x == 2):
		s = s + 1
	elif (x == 3):
		t = t + 1
	elif (x == 4):
		w = w + 1
	elif (x == 5):
		q = q + 1
	elif (x == 6):
		f = f + 1
	else:
		sb = sb + 1
		
p1 = round((s/size(falt)) * 100, 1)
print(p1)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:58:15) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
s = 0
t = 0
w = 0
q = 0
f = 0
sb = 0

for x in falt:
	if (x == 2):
		s = s + 1
	elif (x == 3):
		t = t + 1
	elif (x == 4):
		w = w + 1
	elif (x == 5):
		q = q + 1
	elif (x == 6):
		f = f + 1
	else:
		sb = sb + 1
		
cont = zeros(6, dtype=int)		
		
p1 = round((s/size(falt)) * 100, 1)
p2 = round((t/size(falt)) * 100, 1)
p3 = round((w/size(falt)) * 100, 1)
p4 = round((q/size(falt)) * 100, 1)
p5 = round((f/size(falt)) * 100, 1)
p6 = round((sb/size(falt)) * 100, 1)

cont[0] = cont[0] + p1
cont[1] = cont[1] + p2
cont[2] = cont[2] + p3
cont[3] = cont[3] + p4
cont[4] = cont[4] + p5
cont[5] = cont[5] + p6

print(cont)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 10:58:25) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
s = 0
t = 0
w = 0
q = 0
f = 0
sb = 0

for x in falt:
	if (x == 2):
		s = s + 1
	elif (x == 3):
		t = t + 1
	elif (x == 4):
		w = w + 1
	elif (x == 5):
		q = q + 1
	elif (x == 6):
		f = f + 1
	else:
		sb = sb + 1
		
cont = zeros(6, dtype=int)		
		
p1 = round((s/size(falt)) * 100, 1)
p2 = round((t/size(falt)) * 100, 1)
p3 = round((w/size(falt)) * 100, 1)
p4 = round((q/size(falt)) * 100, 1)
p5 = round((f/size(falt)) * 100, 1)
p6 = round((sb/size(falt)) * 100, 1)

cont[0] = cont[0] + p1
cont[1] = cont[1] + p2
cont[2] = cont[2] + p3
cont[3] = cont[3] + p4
cont[4] = cont[4] + p5
cont[5] = cont[5] + p6

print(cont)
		
-- EXECUTION TIME:
1.0176
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:59:12) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
s = 0
t = 0
w = 0
q = 0
f = 0
sb = 0

for x in falt:
	if (x == 2):
		s = s + 1
	elif (x == 3):
		t = t + 1
	elif (x == 4):
		w = w + 1
	elif (x == 5):
		q = q + 1
	elif (x == 6):
		f = f + 1
	else:
		sb = sb + 1
		
cont = zeros(6, dtype=int)		
		
p1 = float(round((s/size(falt)) * 100, 1))
p2 = float(round((t/size(falt)) * 100, 1))
p3 = float(round((w/size(falt)) * 100, 1))
p4 = float(round((q/size(falt)) * 100, 1))
p5 = float(round((f/size(falt)) * 100, 1))
p6 = float(round((sb/size(falt)) * 100, 1))

cont[0] = cont[0] + p1
cont[1] = cont[1] + p2
cont[2] = cont[2] + p3
cont[3] = cont[3] + p4
cont[4] = cont[4] + p5
cont[5] = cont[5] + p6

print(cont)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:59:25) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
s = 0
t = 0
w = 0
q = 0
f = 0
sb = 0

for x in falt:
	if (x == 2):
		s = s + 1
	elif (x == 3):
		t = t + 1
	elif (x == 4):
		w = w + 1
	elif (x == 5):
		q = q + 1
	elif (x == 6):
		f = f + 1
	else:
		sb = sb + 1
		
cont = zeros(6, dtype=int)		
		
p1 = float(round((s/size(falt)) * 100, 1))
p2 = float(round((t/size(falt)) * 100, 1))
p3 = float(round((w/size(falt)) * 100, 1))
p4 = float(round((q/size(falt)) * 100, 1))
p5 = float(round((f/size(falt)) * 100, 1))
p6 = float(round((sb/size(falt)) * 100, 1))

cont[0] = cont[0] + p1
cont[1] = cont[1] + p2
cont[2] = cont[2] + p3
cont[3] = cont[3] + p4
cont[4] = cont[4] + p5
cont[5] = cont[5] + p6

print(cont)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:00:31) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
s = 0
t = 0
w = 0
q = 0
f = 0
sb = 0

for x in falt:
	if (x == 2):
		s = s + 1
	elif (x == 3):
		t = t + 1
	elif (x == 4):
		w = w + 1
	elif (x == 5):
		q = q + 1
	elif (x == 6):
		f = f + 1
	else:
		sb = sb + 1
		
cont = zeros(6, dtype=int)		
		
p1 = float(round((s/size(falt)) * 100, 1))
p2 = float(round((t/size(falt)) * 100, 1))
p3 = float(round((w/size(falt)) * 100, 1))
p4 = float(round((q/size(falt)) * 100, 1))
p5 = float(round((f/size(falt)) * 100, 1))
p6 = float(round((sb/size(falt)) * 100, 1))

cont[0] = cont[0] + p1
cont[1] = cont[1] + p2
cont[2] = cont[2] + p3
cont[3] = cont[3] + p4
cont[4] = cont[4] + p5
cont[5] = cont[5] + p6

print(cont)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:00:36) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
s = 0
t = 0
w = 0
q = 0
f = 0
sb = 0

for x in falt:
	if (x == 2):
		s = s + 1
	elif (x == 3):
		t = t + 1
	elif (x == 4):
		w = w + 1
	elif (x == 5):
		q = q + 1
	elif (x == 6):
		f = f + 1
	else:
		sb = sb + 1
		
cont = zeros(6, dtype=int)		
		
p1 = float(round((s/size(falt)) * 100, 1))
p2 = float(round((t/size(falt)) * 100, 1))
p3 = float(round((w/size(falt)) * 100, 1))
p4 = float(round((q/size(falt)) * 100, 1))
p5 = float(round((f/size(falt)) * 100, 1))
p6 = float(round((sb/size(falt)) * 100, 1))

cont[0] = cont[0] + p1
cont[1] = cont[1] + p2
cont[2] = cont[2] + p3
cont[3] = cont[3] + p4
cont[4] = cont[4] + p5
cont[5] = cont[5] + p6

print(cont)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:01:27) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
s = 0
t = 0
w = 0
q = 0
f = 0
sb = 0

for x in falt:
	if (x == 2):
		s = s + 1
	elif (x == 3):
		t = t + 1
	elif (x == 4):
		w = w + 1
	elif (x == 5):
		q = q + 1
	elif (x == 6):
		f = f + 1
	else:
		sb = sb + 1
		
cont = zeros(6, dtype=int)		
		
p1 = float(round((s/size(falt)) * 100, 2))
p2 = float(round((t/size(falt)) * 100, 2))
p3 = float(round((w/size(falt)) * 100, 2))
p4 = float(round((q/size(falt)) * 100, 2))
p5 = float(round((f/size(falt)) * 100, 2))
p6 = float(round((sb/size(falt)) * 100, 2))

cont[0] = cont[0] + p1
cont[1] = cont[1] + p2
cont[2] = cont[2] + p3
cont[3] = cont[3] + p4
cont[4] = cont[4] + p5
cont[5] = cont[5] + p6

print(cont)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:01:45) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
s = 0
t = 0
w = 0
q = 0
f = 0
sb = 0

for x in falt:
	if (x == 2):
		s = s + 1
	elif (x == 3):
		t = t + 1
	elif (x == 4):
		w = w + 1
	elif (x == 5):
		q = q + 1
	elif (x == 6):
		f = f + 1
	else:
		sb = sb + 1
		
cont = zeros(6, dtype=int)		
		
p1 = float(round((s/size(falt)) * 10, 2))
p2 = float(round((t/size(falt)) * 10, 2))
p3 = float(round((w/size(falt)) * 10, 2))
p4 = float(round((q/size(falt)) * 10, 2))
p5 = float(round((f/size(falt)) * 10, 2))
p6 = float(round((sb/size(falt)) * 10, 2))

cont[0] = cont[0] + p1
cont[1] = cont[1] + p2
cont[2] = cont[2] + p3
cont[3] = cont[3] + p4
cont[4] = cont[4] + p5
cont[5] = cont[5] + p6

print(cont)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:01:49) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
s = 0
t = 0
w = 0
q = 0
f = 0
sb = 0

for x in falt:
	if (x == 2):
		s = s + 1
	elif (x == 3):
		t = t + 1
	elif (x == 4):
		w = w + 1
	elif (x == 5):
		q = q + 1
	elif (x == 6):
		f = f + 1
	else:
		sb = sb + 1
		
cont = zeros(6, dtype=int)		
		
p1 = float(round((s/size(falt)) * 10, 2))
p2 = float(round((t/size(falt)) * 10, 2))
p3 = float(round((w/size(falt)) * 10, 2))
p4 = float(round((q/size(falt)) * 10, 2))
p5 = float(round((f/size(falt)) * 10, 2))
p6 = float(round((sb/size(falt)) * 10, 2))

cont[0] = cont[0] + p1
cont[1] = cont[1] + p2
cont[2] = cont[2] + p3
cont[3] = cont[3] + p4
cont[4] = cont[4] + p5
cont[5] = cont[5] + p6

print(cont)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:02:24) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
s = 0
t = 0
w = 0
q = 0
f = 0
sb = 0

for x in falt:
	if (x == 2):
		s = s + 1
	elif (x == 3):
		t = t + 1
	elif (x == 4):
		w = w + 1
	elif (x == 5):
		q = q + 1
	elif (x == 6):
		f = f + 1
	else:
		sb = sb + 1
		
cont = zeros(6)		
		
p1 = float(round((s/size(falt)) * 100, 1))
p2 = float(round((t/size(falt)) * 100, 1))
p3 = float(round((w/size(falt)) * 100, 1))
p4 = float(round((q/size(falt)) * 100, 1))
p5 = float(round((f/size(falt)) * 100, 1))
p6 = float(round((sb/size(falt)) * 100, 1))

cont[0] = cont[0] + p1
cont[1] = cont[1] + p2
cont[2] = cont[2] + p3
cont[3] = cont[3] + p4
cont[4] = cont[4] + p5
cont[5] = cont[5] + p6

print(cont)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:02:32) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
s = 0
t = 0
w = 0
q = 0
f = 0
sb = 0

for x in falt:
	if (x == 2):
		s = s + 1
	elif (x == 3):
		t = t + 1
	elif (x == 4):
		w = w + 1
	elif (x == 5):
		q = q + 1
	elif (x == 6):
		f = f + 1
	else:
		sb = sb + 1
		
cont = zeros(6)		
		
p1 = float(round((s/size(falt)) * 100, 1))
p2 = float(round((t/size(falt)) * 100, 1))
p3 = float(round((w/size(falt)) * 100, 1))
p4 = float(round((q/size(falt)) * 100, 1))
p5 = float(round((f/size(falt)) * 100, 1))
p6 = float(round((sb/size(falt)) * 100, 1))

cont[0] = cont[0] + p1
cont[1] = cont[1] + p2
cont[2] = cont[2] + p3
cont[3] = cont[3] + p4
cont[4] = cont[4] + p5
cont[5] = cont[5] + p6

print(cont)
		
-- EXECUTION TIME:
0.760008
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:10:09) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
s = 0
t = 0
w = 0
q = 0
f = 0
sb = 0

for x in falt:
	if (x == 2):
		s = s + 1
	elif (x == 3):
		t = t + 1
	elif (x == 4):
		w = w + 1
	elif (x == 5):
		q = q + 1
	elif (x == 6):
		f = f + 1
	else:
		sb = sb + 1
		
cont = zeros(6)		
		
p1 = float(round((s/size(falt)) * 100, 1))
p2 = float(round((t/size(falt)) * 100, 1))
p3 = float(round((w/size(falt)) * 100, 1))
p4 = float(round((q/size(falt)) * 100, 1))
p5 = float(round((f/size(falt)) * 100, 1))
p6 = float(round((sb/size(falt)) * 100, 1))

cont[0] = cont[0] + p1
cont[1] = cont[1] + p2
cont[2] = cont[2] + p3
cont[3] = cont[3] + p4
cont[4] = cont[4] + p5
cont[5] = cont[5] + p6

print(cont)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:10:13) 
-- CODE:
from numpy import *
falt = array(eval(input("Faltas: ")))
s = 0
t = 0
w = 0
q = 0
f = 0
sb = 0

for x in falt:
	if (x == 2):
		s = s + 1
	elif (x == 3):
		t = t + 1
	elif (x == 4):
		w = w + 1
	elif (x == 5):
		q = q + 1
	elif (x == 6):
		f = f + 1
	else:
		sb = sb + 1
		
cont = zeros(6)		
		
p1 = float(round((s/size(falt)) * 100, 1))
p2 = float(round((t/size(falt)) * 100, 1))
p3 = float(round((w/size(falt)) * 100, 1))
p4 = float(round((q/size(falt)) * 100, 1))
p5 = float(round((f/size(falt)) * 100, 1))
p6 = float(round((sb/size(falt)) * 100, 1))

cont[0] = cont[0] + p1
cont[1] = cont[1] + p2
cont[2] = cont[2] + p3
cont[3] = cont[3] + p4
cont[4] = cont[4] + p5
cont[5] = cont[5] + p6

print(cont)
		
-- EXECUTION TIME:
0.929891
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:10:32) 
-- CODE:
from numpy import *

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:10:36) 
-- CODE:
from numpy import *

-- EXECUTION TIME:
0.966626
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:

-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:

-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:10:56) 
-- CODE:
from numpy import *

-- EXECUTION TIME:
1.72913
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:

-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:

-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:10:57) 
-- CODE:
from numpy import *

-- EXECUTION TIME:
3.7192
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:

-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:

-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:10:57) 
-- CODE:
from numpy import *

-- EXECUTION TIME:
5.77026
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:

-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:

-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:10:57) 
-- CODE:
from numpy import *

-- EXECUTION TIME:
7.6938
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:

-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:

-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:10:57) 
-- CODE:
from numpy import *

-- EXECUTION TIME:
8.49072
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:

-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:

-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:10:57) 
-- CODE:
from numpy import *

-- EXECUTION TIME:
10.6609
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:

-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:

-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:20:17) 
-- CODE:
from numpy import *
faltas = array(eval(input("Faltas: ")))
n = zeros(6)
for x in faltas:
	if(x == 2):
		n[0] = n[0] + 1
	elif(x == 3):
		n[1] = n[1] + 1
	elif(x == 4):
		n[2] = n[2] + 1
	elif(x == 5):
		n[3] = n[3] + 1
	elif(x == 6):
		n[4] = n[4] + 1
	else:
		n[5] = n[5] + 1
		
for i in range(size(n)):
	if(n[i] > 0):
		n[i] = round((n[i]/size(n) * 100), 1)
		
print(n)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:20:31) 
-- CODE:
from numpy import *
faltas = array(eval(input("Faltas: ")))
n = zeros(6)
for x in faltas:
	if(x == 2):
		n[0] = n[0] + 1
	elif(x == 3):
		n[1] = n[1] + 1
	elif(x == 4):
		n[2] = n[2] + 1
	elif(x == 5):
		n[3] = n[3] + 1
	elif(x == 6):
		n[4] = n[4] + 1
	else:
		n[5] = n[5] + 1
		
for i in range(size(n)):
	if(n[i] > 0):
		n[i] = round((n[i]/size(n) * 100), 1)
		
print(n)		
		
-- EXECUTION TIME:
0.979915
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[ 50.    0.    0.   50.   66.7 100. ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 16.7  33.3  66.7  83.3  83.3 133.3]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[33.3 16.7 50.  16.7 33.3 66.7]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:20:43) 
-- CODE:
from numpy import *
faltas = array(eval(input("Faltas: ")))
n = zeros(6)
for x in faltas:
	if(x == 2):
		n[0] = n[0] + 1
	elif(x == 3):
		n[1] = n[1] + 1
	elif(x == 4):
		n[2] = n[2] + 1
	elif(x == 5):
		n[3] = n[3] + 1
	elif(x == 6):
		n[4] = n[4] + 1
	else:
		n[5] = n[5] + 1
		
for i in range(size(n)):
	if(n[i] > 0):
		n[i] = round((n[i]/size(n) * 100), 1)
		
print(n)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:20:50) 
-- CODE:
from numpy import *
faltas = array(eval(input("Faltas: ")))
n = zeros(6)
for x in faltas:
	if(x == 2):
		n[0] = n[0] + 1
	elif(x == 3):
		n[1] = n[1] + 1
	elif(x == 4):
		n[2] = n[2] + 1
	elif(x == 5):
		n[3] = n[3] + 1
	elif(x == 6):
		n[4] = n[4] + 1
	else:
		n[5] = n[5] + 1
		
for i in range(size(n)):
	if(n[i] > 0):
		n[i] = round((n[i]/size(n) * 100), 1)
		
print(n)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:21:42) 
-- CODE:
from numpy import *
faltas = array(eval(input("Faltas: ")))
n = zeros(6)
for x in faltas:
	if(x == 2):
		n[0] = n[0] + 1
	elif(x == 3):
		n[1] = n[1] + 1
	elif(x == 4):
		n[2] = n[2] + 1
	elif(x == 5):
		n[3] = n[3] + 1
	elif(x == 6):
		n[4] = n[4] + 1
	else:
		n[5] = n[5] + 1
		
for x in n:
	if(x > 0):
		x = round((n[i]/size(n) * 100), 1)
		
print(n)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:21:53) 
-- CODE:
from numpy import *
faltas = array(eval(input("Faltas: ")))
n = zeros(6)
for x in faltas:
	if(x == 2):
		n[0] = n[0] + 1
	elif(x == 3):
		n[1] = n[1] + 1
	elif(x == 4):
		n[2] = n[2] + 1
	elif(x == 5):
		n[3] = n[3] + 1
	elif(x == 6):
		n[4] = n[4] + 1
	else:
		n[5] = n[5] + 1
		
for x in n:
	if(x > 0):
		x = round((x/size(n) * 100), 1)
		
print(n)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:22:26) 
-- CODE:
from numpy import *
faltas = array(eval(input("Faltas: ")))
n = zeros(6)
for x in faltas:
	if(x == 2):
		n[0] = n[0] + 1
	elif(x == 3):
		n[1] = n[1] + 1
	elif(x == 4):
		n[2] = n[2] + 1
	elif(x == 5):
		n[3] = n[3] + 1
	elif(x == 6):
		n[4] = n[4] + 1
	else:
		n[5] = n[5] + 1
		
for x in n:
	if(x > 0):
		x = round((x/size(n)) * 100), 1)
		
print(n)		
		
-- ERROR:
File "XXXX", line 20
    x = round((x/size(n)) * 100), 1)
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:22:33) 
-- CODE:
from numpy import *
faltas = array(eval(input("Faltas: ")))
n = zeros(6)
for x in faltas:
	if(x == 2):
		n[0] = n[0] + 1
	elif(x == 3):
		n[1] = n[1] + 1
	elif(x == 4):
		n[2] = n[2] + 1
	elif(x == 5):
		n[3] = n[3] + 1
	elif(x == 6):
		n[4] = n[4] + 1
	else:
		n[5] = n[5] + 1
		
for x in n:
	if(x > 0):
		x = round(((x/size(n)) * 100), 1)
		
print(n)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:23:04) 
-- CODE:
from numpy import *
faltas = array(eval(input("Faltas: ")))
n = zeros(6)
for x in faltas:
	if(x == 2):
		n[0] = n[0] + 1
	elif(x == 3):
		n[1] = n[1] + 1
	elif(x == 4):
		n[2] = n[2] + 1
	elif(x == 5):
		n[3] = n[3] + 1
	elif(x == 6):
		n[4] = n[4] + 1
	else:
		n[5] = n[5] + 1
		
for x in n:
	if(x > 0):
		x = round(((x/size(n)) * 100), 1)
		
print(n)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:23:12) 
-- CODE:
from numpy import *
faltas = array(eval(input("Faltas: ")))
n = zeros(6)
for x in faltas:
	if(x == 2):
		n[0] = n[0] + 1
	elif(x == 3):
		n[1] = n[1] + 1
	elif(x == 4):
		n[2] = n[2] + 1
	elif(x == 5):
		n[3] = n[3] + 1
	elif(x == 6):
		n[4] = n[4] + 1
	else:
		n[5] = n[5] + 1
		
for x in n:
	if(x > 0):
		x = round(((x/size(n)) * 100), 1)
		
print(n)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:23:25) 
-- CODE:
from numpy import *
faltas = array(eval(input("Faltas: ")))
n = zeros(6)
for x in faltas:
	if(x == 2):
		n[0] = n[0] + 1
	elif(x == 3):
		n[1] = n[1] + 1
	elif(x == 4):
		n[2] = n[2] + 1
	elif(x == 5):
		n[3] = n[3] + 1
	elif(x == 6):
		n[4] = n[4] + 1
	else:
		n[5] = n[5] + 1
		
for x in n:
	if(x > 0):
		x = round((x/size(n)) * 100, 1)
		
print(n)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:23:30) 
-- CODE:
from numpy import *
faltas = array(eval(input("Faltas: ")))
n = zeros(6)
for x in faltas:
	if(x == 2):
		n[0] = n[0] + 1
	elif(x == 3):
		n[1] = n[1] + 1
	elif(x == 4):
		n[2] = n[2] + 1
	elif(x == 5):
		n[3] = n[3] + 1
	elif(x == 6):
		n[4] = n[4] + 1
	else:
		n[5] = n[5] + 1
		
for x in n:
	if(x > 0):
		x = round((x/size(n)) * 100, 1)
		
print(n)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:24:46) 
-- CODE:
from numpy import *
faltas = array(eval(input("Faltas: ")))
n = zeros(6)
for x in faltas:
	if(x == 2):
		n[0] = n[0] + 1
	elif(x == 3):
		n[1] = n[1] + 1
	elif(x == 4):
		n[2] = n[2] + 1
	elif(x == 5):
		n[3] = n[3] + 1
	elif(x == 6):
		n[4] = n[4] + 1
	else:
		n[5] = n[5] + 1
		
for x in n:
	if(x > 0):
		x = round(x/6 * 100, 1)
		
print(n)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:25:02) 
-- CODE:
from numpy import *
faltas = array(eval(input("Faltas: ")))
n = zeros(6)
for x in faltas:
	if(x == 2):
		n[0] = n[0] + 1
	elif(x == 3):
		n[1] = n[1] + 1
	elif(x == 4):
		n[2] = n[2] + 1
	elif(x == 5):
		n[3] = n[3] + 1
	elif(x == 6):
		n[4] = n[4] + 1
	else:
		n[5] = n[5] + 1
		
for x in n:
	if(x > 0):
		x = round((x/size(faltas)) * 100, 1)
		
print(n)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:25:16) 
-- CODE:
from numpy import *
faltas = array(eval(input("Faltas: ")))
n = zeros(6)
for x in faltas:
	if(x == 2):
		n[0] = n[0] + 1
	elif(x == 3):
		n[1] = n[1] + 1
	elif(x == 4):
		n[2] = n[2] + 1
	elif(x == 5):
		n[3] = n[3] + 1
	elif(x == 6):
		n[4] = n[4] + 1
	else:
		n[5] = n[5] + 1
		
for x in n:
	if(x > 0):
		x = round((x/size(faltas)) * 1000, 1)
		
print(n)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:25:22) 
-- CODE:
from numpy import *
faltas = array(eval(input("Faltas: ")))
n = zeros(6)
for x in faltas:
	if(x == 2):
		n[0] = n[0] + 1
	elif(x == 3):
		n[1] = n[1] + 1
	elif(x == 4):
		n[2] = n[2] + 1
	elif(x == 5):
		n[3] = n[3] + 1
	elif(x == 6):
		n[4] = n[4] + 1
	else:
		n[5] = n[5] + 1
		
for x in n:
	if(x > 0):
		x = round((x/size(faltas)) * 1000, 1)
		
print(n)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:25:29) 
-- CODE:
from numpy import *
faltas = array(eval(input("Faltas: ")))
n = zeros(6)
for x in faltas:
	if(x == 2):
		n[0] = n[0] + 1
	elif(x == 3):
		n[1] = n[1] + 1
	elif(x == 4):
		n[2] = n[2] + 1
	elif(x == 5):
		n[3] = n[3] + 1
	elif(x == 6):
		n[4] = n[4] + 1
	else:
		n[5] = n[5] + 1
		
for x in n:
	if(x > 0):
		x = round((x/size(faltas)), 1)
		
print(n)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:25:35) 
-- CODE:
from numpy import *
faltas = array(eval(input("Faltas: ")))
n = zeros(6)
for x in faltas:
	if(x == 2):
		n[0] = n[0] + 1
	elif(x == 3):
		n[1] = n[1] + 1
	elif(x == 4):
		n[2] = n[2] + 1
	elif(x == 5):
		n[3] = n[3] + 1
	elif(x == 6):
		n[4] = n[4] + 1
	else:
		n[5] = n[5] + 1
		
for x in n:
	if(x > 0):
		x = round((x/size(faltas)), 1)
		
print(n)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:26:15) 
-- CODE:
from numpy import *
faltas = array(eval(input("Faltas: ")))
n = zeros(6)
for x in faltas:
	if(x == 2):
		n[0] = n[0] + 1
	elif(x == 3):
		n[1] = n[1] + 1
	elif(x == 4):
		n[2] = n[2] + 1
	elif(x == 5):
		n[3] = n[3] + 1
	elif(x == 6):
		n[4] = n[4] + 1
	else:
		n[5] = n[5] + 1
		
for x in n:
	if(x > 0):
		x = x/size(faltas)
		
print(n)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:26:24) 
-- CODE:
from numpy import *
faltas = array(eval(input("Faltas: ")))
n = zeros(6)
for x in faltas:
	if(x == 2):
		n[0] = n[0] + 1
	elif(x == 3):
		n[1] = n[1] + 1
	elif(x == 4):
		n[2] = n[2] + 1
	elif(x == 5):
		n[3] = n[3] + 1
	elif(x == 6):
		n[4] = n[4] + 1
	else:
		n[5] = n[5] + 1
		
for x in n:
	if(x > 0):
		x = x/size(faltas)
		
print(n)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:28:31) 
-- CODE:
from numpy import *
faltas = array(eval(input("Faltas: ")))
n = zeros(6)
for x in faltas:
	if(x == 2):
		n[0] = n[0] + 1
	elif(x == 3):
		n[1] = n[1] + 1
	elif(x == 4):
		n[2] = n[2] + 1
	elif(x == 5):
		n[3] = n[3] + 1
	elif(x == 6):
		n[4] = n[4] + 1
	else:
		n[5] = n[5] + 1
		
for x in n:
	if(x > 0):
		x = x/size(faltas)
		
print(n)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:28:40) 
-- CODE:
from numpy import *
faltas = array(eval(input("Faltas: ")))
n = zeros(6)
for x in faltas:
	if(x == 2):
		n[0] = n[0] + 1
	elif(x == 3):
		n[1] = n[1] + 1
	elif(x == 4):
		n[2] = n[2] + 1
	elif(x == 5):
		n[3] = n[3] + 1
	elif(x == 6):
		n[4] = n[4] + 1
	else:
		n[5] = n[5] + 1
		
for x in n:
	if(x > 0):
		x = x/size(faltas)
		
print(n)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:30:52) 
-- CODE:
from numpy import *
faltas = array(eval(input("Faltas: ")))
n = zeros(6)
for x in faltas:
	if(x == 2):
		n[0] = n[0] + 1
	elif(x == 3):
		n[1] = n[1] + 1
	elif(x == 4):
		n[2] = n[2] + 1
	elif(x == 5):
		n[3] = n[3] + 1
	elif(x == 6):
		n[4] = n[4] + 1
	else:
		n[5] = n[5] + 1
		

		
print(n)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:31:01) 
-- CODE:
from numpy import *
faltas = array(eval(input("Faltas: ")))
n = zeros(6)
for x in faltas:
	if(x == 2):
		n[0] = n[0] + 1
	elif(x == 3):
		n[1] = n[1] + 1
	elif(x == 4):
		n[2] = n[2] + 1
	elif(x == 5):
		n[3] = n[3] + 1
	elif(x == 6):
		n[4] = n[4] + 1
	else:
		n[5] = n[5] + 1
		

		
print(n)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:31:09) 
-- CODE:
from numpy import *
faltas = array(eval(input("Faltas: ")))
n = zeros(6)
for x in faltas:
	if(x == 2):
		n[0] = n[0] + 1
	elif(x == 3):
		n[1] = n[1] + 1
	elif(x == 4):
		n[2] = n[2] + 1
	elif(x == 5):
		n[3] = n[3] + 1
	elif(x == 6):
		n[4] = n[4] + 1
	else:
		n[5] = n[5] + 1
		

		
print(n)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:32:28) 
-- CODE:
from numpy import *
faltas = array(eval(input("Faltas: ")))
n = zeros(6)
for x in faltas:
	if(x == 2):
		n[0] = n[0] + 1
	elif(x == 3):
		n[1] = n[1] + 1
	elif(x == 4):
		n[2] = n[2] + 1
	elif(x == 5):
		n[3] = n[3] + 1
	elif(x == 6):
		n[4] = n[4] + 1
	else:
		n[5] = n[5] + 1
		
for i in range(size(n)):
	if(n[i] > 0):
		n[i] = round(n[i]/size(faltas), 1)
		
print(n)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:32:37) 
-- CODE:
from numpy import *
faltas = array(eval(input("Faltas: ")))
n = zeros(6)
for x in faltas:
	if(x == 2):
		n[0] = n[0] + 1
	elif(x == 3):
		n[1] = n[1] + 1
	elif(x == 4):
		n[2] = n[2] + 1
	elif(x == 5):
		n[3] = n[3] + 1
	elif(x == 6):
		n[4] = n[4] + 1
	else:
		n[5] = n[5] + 1
		
for i in range(size(n)):
	if(n[i] > 0):
		n[i] = round(n[i]/size(faltas), 1)
		
print(n)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:32:54) 
-- CODE:
from numpy import *
faltas = array(eval(input("Faltas: ")))
n = zeros(6)
for x in faltas:
	if(x == 2):
		n[0] = n[0] + 1
	elif(x == 3):
		n[1] = n[1] + 1
	elif(x == 4):
		n[2] = n[2] + 1
	elif(x == 5):
		n[3] = n[3] + 1
	elif(x == 6):
		n[4] = n[4] + 1
	else:
		n[5] = n[5] + 1
		
for i in range(size(n)):
	if(n[i] > 0):
		n[i] = round(n[i]/size(faltas), 1)
		
print(n)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:33:09) 
-- CODE:
from numpy import *
faltas = array(eval(input("Faltas: ")))
n = zeros(6)
for x in faltas:
	if(x == 2):
		n[0] = n[0] + 1
	elif(x == 3):
		n[1] = n[1] + 1
	elif(x == 4):
		n[2] = n[2] + 1
	elif(x == 5):
		n[3] = n[3] + 1
	elif(x == 6):
		n[4] = n[4] + 1
	else:
		n[5] = n[5] + 1
		
for i in range(size(n)):
	if(n[i] > 0):
		n[i] = round((n[i]/size(faltas)) * 100, 1)
		
print(n)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:33:22) 
-- CODE:
from numpy import *
faltas = array(eval(input("Faltas: ")))
n = zeros(6)
for x in faltas:
	if(x == 2):
		n[0] = n[0] + 1
	elif(x == 3):
		n[1] = n[1] + 1
	elif(x == 4):
		n[2] = n[2] + 1
	elif(x == 5):
		n[3] = n[3] + 1
	elif(x == 6):
		n[4] = n[4] + 1
	else:
		n[5] = n[5] + 1
		
for i in range(size(n)):
	if(n[i] > 0):
		n[i] = round((n[i]/size(faltas)) * 100, 1)
		
print(n)		
		
-- EXECUTION TIME:
1.16826
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
